
cc_library(
	name = "icl",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_type_traits//:type_traits"
	],
)
